<?xml version="1.0"?>
<package>
  <name>node_example</name>
  <version>0.0.0</version>
  <description>The node_example package. Contain octomap data topic</description>

  <maintainer email="pablomvera14@gmail.com">Pablo Moreno</maintainer>
  <license>TODO</license>
  <author email="pablomvera14@gmail.com">Pablo Moreno</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

  <export>

  </export>
</package>
